try fixing home photo, delete unnecessary files

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -8,7 +8,7 @@
           <a class="site-logo" href="{{ '/' | relative_url }}"><img src="{{ logo_path | relative_url }}" alt=""></a>
         {% endunless %}
         <a class="site-title" href="{{ '/' | relative_url }}">
-          <img src="{{site.baseurl}}/assets/images/vmgLogoHeader.svg" >
+          <img src="{{site.baseurl}}/assets/images/umdcs.svg" >
         </a>
         <ul class="visible-links">
           {%- for link in site.data.navigation.main -%}
