--- a/_layouts/webseries.html
+++ b/_layouts/webseries.html
@@ -18,7 +18,6 @@
     {% include_cached skip-links.html %}
     {% include_cached browser-upgrade.html %}
     {% include_cached masthead.html %}
-    <br> <br> <br> <br> <br>
     <div>
       <img src="/assets/images/webseries/presentation.png" alt="Banner" style="width:100%; height:auto; margin-bottom:12px; opacity:0.5;">
     </div>
@@ -53,16 +52,17 @@
               </div>
             {% endfor %}
             <div style="width:100%;"></div>
+            <!-- <br>
             <br>
-            <br>
-            <br>
+            <br> -->
           {% endif %}
 
           <!-- Entries -->
           {% if section_counter == 3 %}
           <div style="color:#8f3985;"> {{ section }} </div>
           <div style="width:100%;"></div>
-            {% for entry in site.data.webseries %}
+          <!-- 🙏 3/2/23: I changed the below from `% for entry in site.data.webseries %` -->
+            {% for entry in <site class="data webseries yml"></site> %}
               <div class="webseries-entry" style="border:lightgray 1px solid; width: 100%; ">
                 <div class="webseries-speaker" style="height: 250px;">
                     <div class="webseries-image" style="height: 250px; display:inline-block; text-align: center;">
